--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">MADAGASY EXAMS</string>
     <string name="bac">BACC</string>
-    <string name="banner_ad_unit_id">ca-app-pub-7038787403547669/9432885089</string>
+    <string name="banner_ad_unit_id"></string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_subjects">subjects</string>
-    <string name="interstitial_ad_unit_id">ca-app-pub-7038787403547669/6834641901</string>
+    <string name="interstitial_ad_unit_id"></string>
     <string name="draweropen">Drawer Opened</string>
-    <string name="admob_app_id">ca-app-pub-7038787403547669~6510290389</string>
+    <string name="admob_app_id"></string>
     <string name="drawerclose">Drawer Closed</string>
     <string name="link1"><a>http://www.omnicours.com/dossiers-pedagogiques/comment-choisir-son-orientation-scolaire</a></string>
     <string name="link2"><a>http://www.reussir-examens-concours.com/5-conseils-pour-reussir-ses-etudes</a></string>
